@@ -1,0 +1,32 @@
+define host{
+	host_name				host1
+	address				192.168.0.1
+	hostgroups			HOSTGROUP1
+}
+
+define host{
+	host_name				host2
+	address				192.168.0.2
+	hostgroups			HOSTGROUP1
+}
+
+define host
+	host_name				host3
+	address				192.168.0.3
+	hostgroups			HOSTGROUP1
+}
+
+define host{
+	host_name				host4
+	address				192.168.0.4
+	hostgroups			HOSTGROUP1
+}
+
+define hostgroup{
+	hostgroup_name			HOSTGROUP1
+}
+
+define hostgroup{
+	hostgroup_name			HOSTGROUP2
+	members				host1,host2,host3,host4
+}
